# precipgen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL_FOR_USERS.md  LICENSE  MANIFEST.in  README.md  debug_station_keys.py  demo_analytical_engine.py  demo_simulation_engine.py  demo_trend_analysis.py  demo_trend_projection.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_error_handling.py  test_installation.py
docs/: README.md  algorithms.md  api_reference.md  getting_ghcn_data.md  installation.md  mathematical_foundation.md  user_guide.md
docs/examples/: README.md  basic_analysis.py  download_ghcn_data.py  engineering_precipitation_analysis_template.ipynb  engineering_precipitation_template.py  jupyter_precipitation_simulation.py  quality_assessment_simplified.py  sea_tac_precip_simulation.ipynb  simple_ghcn_download.py  simple_monte_carlo_example.py  trend_analysis.py  tutorial_01_getting_started.py  water_resources_analysis.py
old_code/: PGNPAR_PROJECT_CONTEXT.md  analysis.py  calculations.py  climate.py  climate_engine.py  climate_sources.py  data_loader.py  extract_monthly_params.py  output_generator.py  precipgen_params.py  wgen.py
output/: analysis_report.json  parameter_manifest.json
precipgen/: __init__.py
precipgen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
precipgen/api/: __init__.py  data_exchange.py  standardized_api.py  synchronization.py
precipgen/config/: __init__.py  data_source_config.py  precipgen_config.py  quality_config.py  quality_presets.py
precipgen/data/: __init__.py  base.py  ghcn_downloader.py  ghcn_parser.py  validator.py
precipgen/engines/: __init__.py  analytical.py  base.py  bootstrap.py  simulation.py
precipgen/simulation/: __init__.py  analysis.py  monte_carlo.py
precipgen/utils/: __init__.py  exceptions.py  (+1 more)
tests/: __init__.py  conftest.py  test_analytical_engine_integration.py  test_api_standardization.py  test_basic_functionality.py  test_bootstrap_engine.py  test_final_integration.py  test_parameter_calculation.py  test_simulation_engine.py
(+3 files in other folders)
